# pcalc

./: .gitignore  AUTHORS  ChangeLog  EXAMPLE  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.lex  NEWS  README.md  Specification  aclocal.m4  clean.out  config.h.in  config.status  configure  configure.ac  configure.ac~  configure.in  configure~  help.c  lexyy.c  pcalc  pcalc.c  pcalc.h  pcalc.output  pcalc.y  pcalcl.c  pcalcl.l  search.cfg  search.res  store.c  symbol.c  yacc.y
.deps/: convert.P  convert.Po  funct.P  funct.Po  help.P  help.Po  math.P  math.Po  pcalc-convert.Po  pcalc-funct.Po  pcalc-help.Po  pcalc-math.Po  pcalc-pcalc.Po  pcalc-pcalcl.Po  pcalc-print.Po  pcalc-store.Po  pcalc-str.Po  pcalc-symbol.Po  pcalc.P  pcalc.Po  pcalcl.P  pcalcl.Po  print.P  print.Po  store.P  store.Po  str.P  str.Po  symbol.P  symbol.Po
autom4te.cache/: output.0  output.1  output.2  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
ptest/: check  check.sh  checkdate.sh  make-origin.sh  original.txt  pcalc.var  result  test.var  testdate.011
sfdl-000/: AUTHORS  Makefile  Makefile.in  aclocal.m4  config.cache  config.status  configure  configure.scan  pack  pcalc.$$$  pcalc.tmp  pcalc.var  www
src/: Makefile.am  config.status  configure  configure.ac  funct.c  help.c  help.h  pcalc.c  pcalc.c.org  pcalc.h  pcalc.y  pcalcl.l  print.c  str.c
src/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
